# simbly

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SimblyPresentation.odp
src/: .gdb_history  Makefile  common.h  error.c  error.h  exec.c  exec.h  global.c  global.h  main.c  program.c  program.h  runtime.c  runtime.h  scanner.c  scanner.h
test_programs/: Barber.txt  Consumer.txt  Customer.txt  Init.txt  InitRW.txt  Producer.txt  Reader.txt  Rend1.txt  Rend2.txt  SumN.txt  Test.txt  Writer.txt
